fix for bug #32710.  make sure to call gdk_drop_finish() after the drop.  this gets rid of the problem of a ghost icon flying across the screen a few minutes after a drag-n-drop operation.